[package]
name = "bufrw"
version = "0.1.0"
edition = "2024"

[features]
prof = ["profi/enable", "profi/attributes"]

[dependencies]
rand = "0.9.2"
profi = { version = "*", default-features = false }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[profile.release]
debug = true


[[bench]]
name = "benches"
harness = false