[package]
name = "bufrw"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "This crate provides a single adapter that buffers reads and writes on the same stream"
readme = "Readme.md"

[dependencies]
rand = "0.9.2"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false